--- a/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
@@ -126,9 +126,11 @@ function loggingIdentity<T>(arg: T[]): T[] {
 
 You can read the type of `loggingIdentity` as “the generic function `loggingIdentity` takes a type parameter `T`, and an argument `arg` which is an array of `T`s, and returns an array of `T`s.” If we passed in an array of numbers, we’d get an array of numbers back out, as `T` would bind to `number`. This allows us to use our generic type variable `T` as part of the types we’re working with, rather than the whole type, giving us greater flexibility.
 
-
+你可以这样理解上面的代码: "泛型函数 `loggingIdentity` 接收一个类型参数 `T`, 一个类型为 `T` 的数组的函数参数 `arg`, 返回一个数组项类型为 `T` 的数组". 如果我们传入一个 `number` 的数组, 我们得到的输出就也是 `number` 类型的数组, 因为 `T` 的类型在这里就是 `number`. 这允许我们使用泛型类型变量 `T` 作为类型的一部分参与到代码中, 而不是所有的类型都可以用. 这个我们带来了巨大的灵活性.
 
 We can alternatively write the sample example this way:
+
+我们也可以这样写:
 
 ```ts
 function loggingIdentity<T>(arg: Array<T>): Array<T> {
@@ -139,11 +141,17 @@ function loggingIdentity<T>(arg: Array<T>): Array<T> {
 
 You may already be familiar with this style of type from other languages. In the next section, we’ll cover how you can create your own generic types like `Array<T>`.
 
-## Generic Types
+你也许从其它语言那里了解了这种类型. 下面一节中, 我们会讲到你要如何才能创建你自己的像 `Array<T>`  这样的泛型类型.
+
+## 泛型类型 (简称泛类型)
 
 In previous sections, we created generic identity functions that worked over a range of types. In this section, we’ll explore the type of the functions themselves and how to create generic interfaces.
 
+在前面的章节中, 我们创建了适用于一些列类型的泛型函数 `identity`. 这一节中, 我们将探索函数本身的类型以及如何创建泛型接口。
+
 The type of generic functions is just like those of non-generic functions, with the type parameters listed first, similarly to function declarations:
+
+泛型函数的类型就像那些非泛型函数的一样, 就像函数声明一样, 首先列出类型参数:
 
 ```ts
 function identity<T>(arg: T): T {
@@ -155,6 +163,8 @@ let myIdentity: <T>(arg: T) => T = identity;
 
 We could also have used a different name for the generic type parameter in the type, so long as the number of type variables and how the type variables are used line up.
 
+泛型类型参数也可以指定为其他的名字, 但是我们需要保证类型变量的数目和使用的顺序是一致的.
+
 ```ts
 function identity<T>(arg: T): T {
     return arg;
@@ -165,6 +175,8 @@ let myIdentity: <U>(arg: U) => U = identity;
 
 We can also write the generic type as a call signature of an object literal type:
 
+我们也可以将泛型类型写作一个对象字面量类型的调用签名:
+
 ```ts
 function identity<T>(arg: T): T {
     return arg;
@@ -174,6 +186,8 @@ let myIdentity: {<T>(arg: T): T} = identity;
 ```
 
 Which leads us to writing our first generic interface. Let’s take the object literal from the previous example and move it to an interface:
+
+这将领导我们写第一个泛型接口. 现在我们将前面例子中的对象字面量移动到一个接口中:
 
 ```ts
 interface GenericIdentityFn {
@@ -189,6 +203,8 @@ let myIdentity: GenericIdentityFn = identity;
 
 In a similar example, we may want to move the generic parameter to be a parameter of the whole interface. This lets us see what type(s) we’re generic over (e.g. `Dictionary<string>`rather than just `Dictionary`). This makes the type parameter visible to all the other members of the interface.
 
+在一个类似的例子中, 我们希望将泛型参数移动到整个接口中作为整个接口的参数. 这样我们能够看到泛型的类型(如 `Dictionary<string>` 而不仅仅是 `Dictionary`). 这使得接口中的所有成员都能够知道泛型的类型参数.
+
 ```ts
 interface GenericIdentityFn<T> {
     (arg: T): T;
@@ -203,11 +219,17 @@ let myIdentity: GenericIdentityFn<number> = identity;
 
 Notice that our example has changed to be something slightly different. Instead of describing a generic function, we now have a non-generic function signature that is a part of a generic type. When we use `GenericIdentityFn`, we now will also need to specify the corresponding type argument (here: `number`), effectively locking in what the underlying call signature will use. Understanding when to put the type parameter directly on the call signature and when to put it on the interface itself will be helpful in describing what aspects of a type are generic.
 
+注意我们的例子变得有一点儿不同了. 我们并没有描述一个泛型函数, 而是使用一个非泛型函数签名, 它是泛型的一部分. 当我们使用 `GenericIdentityFn` 时, 我们将仍然需要指定正确的类型参数(这里是`number`), 它锁定了签名被调用时的类型. 了解在什么时候将类型参数直接放到调用签名上和在何时将它放到接口本身上对描述类型在那些方面通用非常有帮助.
+
 In addition to generic interfaces, we can also create generic classes. Note that it is not possible to create generic enums and namespaces.
 
-## Generic Classes
+除了泛型接口, 我们还可以创建泛型类. 注意不能创建泛型枚举和泛型名字空间.
+
+## 泛型类
 
 A generic class has a similar shape to a generic interface. Generic classes have a generic type parameter list in angle brackets (`<>`) following the name of the class.
+
+泛型类和泛型接口的写法很像. 泛型类在类名后面的尖括号(`<>`) 中列出了泛类型参数.
 
 ```ts
 class GenericNumber<T> {
@@ -222,6 +244,8 @@ myGenericNumber.add = function(x, y) { return x + y; };
 
 This is a pretty literal use of the `GenericNumber` class, but you may have noticed that nothing is restricting it to only use the `number` type. We could have instead used `string` or even more complex objects.
 
+这是 `GenericNumber` 类最普通的用法, 你应该知道这里并没有限制使用 `number` 类型. 我们可以使用 `string` 甚至是更复杂的对象.
+
 ```ts
 let stringNumeric = new GenericNumber<string>();
 stringNumeric.zeroValue = "";
@@ -232,11 +256,17 @@ alert(stringNumeric.add(stringNumeric.zeroValue, "test"));
 
 Just as with interface, putting the type parameter on the class itself lets us make sure all of the properties of the class are working with the same type.
 
+跟接口的这种写法一样, 把类型参数放到类上面可以确保类中所有的属性都能使用相同的类型.
+
 As we covered in our section on classes, a class has two sides to its type: the static side and the instance side. Generic classes are only generic over their instance side rather than their static side, so when working with classes, static members can not use the class’s type parameter.
 
-## Generic Constraints
+我没在 classes 一节提到, 类有两中类型: 静态类型和实例类型. 泛型类只在实例端具有泛型而不是静态端, 因此当用于类的时候, 静态成员不能使用类的类型参数.
+
+## 泛型约束
 
 If you remember from an earlier example, you may sometimes want to write a generic function that works on a set of types where you have some knowledge about what capabilities that set of types will have. In our `loggingIdentity` example, we wanted to be able to access the `.length` property of `arg`, but the compiler could not prove that every type had a `.length` property, so it warns us that we can’t make this assumption.
+
+如果你还记得之前的例子, 在你知道某一组类型会具有什么功能的时候你可能想针对它们写一个通用函数(泛型函数), 在我们的 `loggingIdentity` 例子中, 我们希望能够访问 `arg` 的 `.length` 属性, 但是编译器不能保证每个类型都会有 `.length` 属性, 因此它警告我们不能做出这样的假设.
 
 ```ts
 function loggingIdentity<T>(arg: T): T {
@@ -247,7 +277,11 @@ function loggingIdentity<T>(arg: T): T {
 
 Instead of working with any and all types, we’d like to constrain this function to work with any and all types that also have the `.length` property. As long as the type has this member, we’ll allow it, but it’s required to have at least this member. To do so, we must list our requirement as a constraint on what T can be.
 
+比起使用全类型, 我们更喜欢约束这个函数使用的全类型还需要有 `.length` 属性. 只要这个类型有这个成员, 我们就允许它, 但是它必须至少是有这个成员的. 要做到这样, 我们就必须列出我们的关于约束 T 需要成为的类型.
+
 To do so, we’ll create an interface that describes our constraint. Here, we’ll create an interface that has a single `.length` property and then we’ll use this interface and the `extends` keyword to denote our constraint:
+
+如果要做到这样, 我们需要创建一个可以描述我们约束的接口. 这里, 我们将创建一个有 `.length` 属性的接口, 然后使用这个接口和关键字 `extends` 一起来表示我们的约束:
 
 ```ts
 interface Lengthwise {
@@ -262,19 +296,25 @@ function loggingIdentity<T extends Lengthwise>(arg: T): T {
 
 Because the generic function is now constrained, it will no longer work over any and all types:
 
+因为泛型函数现在收到了约束, 我们就不必再基于全类型了:
+
 ```ts
 loggingIdentity(3);  // Error, number doesn't have a .length property
 ```
 
 Instead, we need to pass in values whose type has all the required properties:
 
+取而代之的是, 我们传入的参数的值必须具有所有必须的属性:
+
 ```ts
 loggingIdentity({length: 10, value: 3});
 ```
 
-### Using Type Parameters in Generic Constraints
+### 泛型约束中使用类型参数
 
 You can declare a type parameter that is constrained by another type parameter. For example, here we’d like to get a property from an object given its name. We’d like to ensure that we’re not accidentally grabbing a property that does not exist on the `obj`, so we’ll place a constraint between the two types:
+
+你可以声明一个被另一个类型参数约束的类型参数. 例如, 这里我们希望从一个对象中得到一个属性来指定它的名字.  我们希望能够保证我们不会意外的使用了一个在 `obj` 上不存在的属性, 因此我们在两种类型之间设置了一个约束:
 
 ```ts
 function getProperty<T, K extends keyof T>(obj: T, key: K) {
@@ -287,9 +327,11 @@ getProperty(x, "a"); // okay
 getProperty(x, "m"); // error: Argument of type 'm' isn't assignable to 'a' | 'b' | 'c' | 'd'.
 ```
 
-### Using Class Types in Generics
+### 在泛型中使用类类型
 
 When creating factories in TypeScript using generics, it is necessary to refer to class types by their constructor functions. For example,
+
+当在 typescript 中使用泛型创建工厂函数时, 有必要通过它们的构造函数来引用类的类型。
 
 ```ts
 function create<T>(c: {new(): T; }): T {
@@ -298,6 +340,8 @@ function create<T>(c: {new(): T; }): T {
 ```
 
 A more advanced example uses the prototype property to infer and constrain relationships between the constructor function and the instance side of class types.
+
+更高级的一个示例是使用 `prototype` 属性来推断和约束构造函数和类类型实例端之间的约束.
 
 ```ts
 class BeeKeeper {
