--- a/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
@@ -4,17 +4,17 @@
 
 A major part of software engineering is building components that not only have well-defined and consistent APIs, but are also reusable. Components that are capable of working on the data of today as well as the data of tomorrow will give you the most flexible capabilities for building up large software systems.
 
-软件工程的宗旨除了构建定义良好且一致的 API, 还需要让代码可重用. 如果一个组件既能够满足当前的使用场景, 也能够满足未来的使用情况, 那么它就为你构建一个大型软件系统提供了足够的灵活性.
+软件工程的一个重要部分就是组件不仅要具有良好且一致的 API, 而且还需要能够可重用. 如果一个组件既能够满足当前的使用场景, 也能够满足未来的使用情况, 那么它就为你在构建一个大型软件系统时提供了足够的灵活性.
 
 In languages like C# and Java, one of the main tools in the toolbox for creating reusable components is generics, that is, being able to create a component that can work over a variety of types rather than a single one. This allows users to consume these components and use their own types.
 
-像在 C# 或者 Java 中, 工具箱中用于构建可重用组件的一个主要工具就是泛型, 也就是说, 用它能够创建出的组件能够良好的运行在各种类型的数据上, 而不是只能适用于一种. 这使得用户可以用它们自己定义的类型来使用这些组件.
+像在 C# 或者 Java 这些语言中泛型是用于构建可重用组件的一个主要工具， 也就是说, 用它构建出的组件能够用于各种类型，而不仅仅只是在一种类型上使用。 这使得用户可以根据他们自己定义的类型来使用这些组件.
 
 ## Hello World of Generics
 
 To start off, let’s do the “hello world” of generics: the identity function. The identity function is a function that will return back whatever is passed in. You can think of this in a similar way to the `echo` command.
 
-我们使用 `identity` 方法来开始第一行泛型代码. `identity` 方法直接将传入的参数返回. 你可以把它当做是 `echo` 命令.
+我们使用 `identity` 方法来开始第一行泛型代码. 这个 `identity` 方法直接将传入的参数返回. 你可以把它当做是 `echo` 命令。
 
 Without generics, we would either have to give the identity function a specific type:
 
@@ -28,7 +28,7 @@ function identity(arg: number): number {
 
 Or, we could describe the identity function using the `any` type:
 
-或者为 `identity` 函数指定 `any` 类型:
+或者给 `identity` 函数指定 `any` 类型:
 
 ```ts
 function identity(arg: any): any {
@@ -38,11 +38,11 @@ function identity(arg: any): any {
 
 While using `any` is certainly generic in that it will cause the function to accept any and all types for the type of `arg`, we actually are losing the information about what that type was when the function returns. If we passed in a number, the only information we have is that any type could be returned.
 
-尽管使用 `any` 会让函数接受任何类型的参数, 但是当函数返回的时候却得不到明确的类型信息. 如果我们传入 number 类型, 我们也只能知道返回值可能是任意类型 (因为 `any` 类型并不能指定某个特定的类型, 返回 `any` 类型可以是 `number`, `string` 等, 但是泛型可以指定传入的类型作为返回的类型).
+虽然使用 `any` 肯定是通用的，因为它会让函数参数 `arg` 接受任何类型的参数, 但实际上我们丢失了函数返回时的类型信息. 如果我们传入的参数是 number 类型, 我们也只知道返回值可能是任意类型 (因为 `any` 类型并不能指定某个特定的类型, 返回 `any` 类型可以是 `number`, `string` 等, 但是泛型可以用来锁定某一特定类型，这个类型会在使用泛型定义的函数时才进行指定，可以说是根据使用情况进行动态指定).
 
 Instead, we need a way of capturing the type of the argument in such a way that we can also use it to denote what is being returned. Here, we will use a type variable, a special kind of variable that works on types rather than values.
 
-因此, 在这种情况中我们需要一种能够捕获参数类型的方式来指定返回的类型. 这里, 我们使用类型变量, 一种可以用于所有的类型而非具体值的一种特殊变量.
+因此, 在这种情况下我们需要一种能够捕获参数类型的方式来指定返回值的类型。 这里, 我们使用一个叫做 `“类型变量”` 的东西, 它是一种表示类型的特殊变量（普通变量的值就是各种 JavaScript 数据类型的值，类型变量的值代表一种类型，也就是说它是类型的变量），而不是表示特定的值的普通变量。
 
 ```ts
 function identity<T>(arg: T): T {
@@ -52,11 +52,13 @@ function identity<T>(arg: T): T {
 
 We’ve now added a type variable `T` to the identity function. This `T` allows us to capture the type the user provides (e.g. `number`), so that we can use that information later. Here, we use `T` again as the return type. On inspection, we can now see the same type is used for the argument and the return type. This allows us to traffic that type information in one side of the function and out the other.
 
-现在我们给 identity 函数添加类型变量 `T`. 它允许我们捕获用户提供的类型(如 `number`), 因此我们在后面可以使用这个类型. 这里, 我们又使用 `T` 作为返回类型. 现在我们的参数和返回值都是同一个类型了. 这使得我们可以从函数的输入到输出都能跟踪类型信息.
+现在我们给 identity 函数添加类型变量 `T`. 它（指类型变量`T`）能够让我们捕获用户提供的参数的类型(如用户提供的是 `number` 类型的参数，那么 `T` 就代表是一种 `number` 类型，也即 `number` 这种类型保存在类型变量 `T` 中), 因此我们稍后可以使用这个类型. 这里, 我们又使用 `T` 作为返回值的类型. 现在 `identity` 的参数的类型和返回值的类型都是同一个类型了. 这（泛型）使得我们可以将某一类型从函数的输入端传递到函数的输出端.
 
 We say that this version of the `identity` function is generic, as it works over a range of types. Unlike using `any`, it’s also just as precise (ie, it doesn’t lose any information) as the first `identity` function that used numbers for the argument and return type.
 
-我们就说这个版本的 `identity` 方法就是泛型, 因为它能够适用于多种类型. 不像 `any` 那样, 现在这个函数也可以像第一个 `identity` 函数那样精确的指定 number  作为参数和返回值类型.
+我们就说带有 `T` 的这个版本的 `identity` 方法就是泛型, 因为它能够适用于多种类型. 与 `any` 不同的是, 现在这个函数也能够做到像（本文）第一个通过明确指定 number 类型来作为函数参数和返回值类型的 `identity` 函数那样精确.
+
+-------------------- 二次审查至此----------------
 
 Once we’ve written the generic identity function, we can call it in one of two ways. The first way is to pass all of the arguments, including the type argument, to the function:
 
