--- a/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
@@ -56,13 +56,11 @@ We’ve now added a type variable `T` to the identity function. This `T` allows 
 
 We say that this version of the `identity` function is generic, as it works over a range of types. Unlike using `any`, it’s also just as precise (ie, it doesn’t lose any information) as the first `identity` function that used numbers for the argument and return type.
 
-我们就说带有 `T` 的这个版本的 `identity` 方法就是泛型, 因为它能够适用于多种类型. 与 `any` 不同的是, 现在这个函数也能够做到像（本文）第一个通过明确指定 number 类型来作为函数参数和返回值类型的 `identity` 函数那样精确.
-
--------------------- 二次审查至此----------------
+由于带有 `T` 的这个版本的 `identity` 方法能够适用于各种类型, 因此我们就说它是泛型函数（这种方法也就称为泛型）. 与 `any` 不同的是, 现在这个函数也能够做到像（本文）第一个通过明确指定 number 类型来作为函数参数和返回值类型的 `identity` 函数那样精确（的控制类型）.
 
 Once we’ve written the generic identity function, we can call it in one of two ways. The first way is to pass all of the arguments, including the type argument, to the function:
 
-写完泛型函数 `identity` 之后, 我们可以使用两种方式来调用它. 第一种就是给函数传入所有的参数, 包括参数类型:
+写完泛型函数 `identity` 之后, 我们可以使用以下两种方式之一来调用它. 第一种就是给函数传入所有的参数, 包括类型参数:
 
 ```ts
 let output = identity<string>("myString");  // type of output will be 'string'
@@ -70,11 +68,11 @@ let output = identity<string>("myString");  // type of output will be 'string'
 
 Here we explicitly set `T` to be `string` as one of the arguments to the function call, denoted using the `<>` around the arguments rather than `()`.
 
-这里在调用函数的时候我们将 `T` 显式指定为 `string`, 注意是使用 `<>` 包裹参数而不是 `()`.
+我们通过将 `T` 显式指定为 `string` 来调用该泛型函数, 注意类型参数是放在 `<>` 里的而非 `()`.
 
 The second way is also perhaps the most common. Here we use type argument inference – that is, we want the compiler to set the value of `T` for us automatically based on the type of the argument we pass in:
 
-第二种方式可能更常用. 使用类型推断 - 也就是说, 我们希望编译器根据我们传入的参数类型自动为我们设置 `T` 的类型.
+第二种方式可能更常用. 那就是使用类型推断 - 也就是说, 我们希望编译器根据我们传入参数的类型自动推断出 `T` 的类型.
 
 ```ts
 let output = identity("myString");  // type of output will be 'string'
@@ -82,13 +80,13 @@ let output = identity("myString");  // type of output will be 'string'
 
 Notice that we didn’t have to explicitly pass the type in the angle brackets (`<>`); the compiler just looked at the value "`myString`", and set `T` to its type. While type argument inference can be a helpful tool to keep code shorter and more readable, you may need to explicitly pass in the type arguments as we did in the previous example when the compiler fails to infer the type, as may happen in more complex examples.
 
-注意, 我们没有显式使用 (`<>`) 来指定类型; 编译器会检查 "`myString`" 值的类型, 然后将 `T` 设置为它的类型. 尽管参数类型推断对简化代码和增强代码可读性很有帮助, 但是当在一些更复杂的例子中, 编译器不能推断参数类型的时候还是需要像前面的例子那样显式的指定出参数的类型.
+注意, 我们并没有显式使用 (`<>`) 来指定类型; 编译器会检查 "`myString`" 值的类型, 然后将 `T` 设置为它的类型. 类型参数推断对简化代码和增强代码可读性很有帮助, 但是在一些更复杂的例子中, 如果编译器不能准确的推断出参数类型的时候我们还是需要像前面的例子那样 (通过`<>`) 显式的将类型传递给类型参数.
 
 ## 使用泛型的类型变量
 
 When you begin to use generics, you’ll notice that when you create generic functions like `identity`, the compiler will enforce that you use any generically typed parameters in the body of the function correctly. That is, that you actually treat these parameters as if they could be any and all types.
 
-当你开始使用泛型后, 你将会注意到当你创建一个像 `identity` 这样的泛型函数时, 编译器会在函数体中强制你使用任何常规类型. 也就是说, 你需要把这些参数当做它们可能是任意类型.
+当你开始使用泛型时, 你是否注意到当你在编写一个像 `identity` 这样的泛型函数时, 编译器会在函数体中强制你的代码满足任何常规类型的使用. 也就意味着, 你实际上需要把这些参数当做它可能是任何类型来对待(大概意思就是, 泛型函数中的所有代码都要满足所有类型的使用情况, 而不能只满足你自己考虑的某几种特定情况, 也就是说你不能假设它一定会是某种类型, 泛型中的代码需要通用).
 
 Let’s take our `identity` function from earlier:
 
@@ -102,7 +100,7 @@ function identity<T>(arg: T): T {
 
 What if we want to also log the length of the argument `arg` to the console with each call? We might be tempted to write this:
 
-如果我们希望打印参数 `arg` 的长度, 我们可能这么写:
+如果我们希望在每次调用的时候打印参数 `arg` 的 `length` 属性, 我们可能会像下面这样写:
 
 ```ts
 function loggingIdentity<T>(arg: T): T {
@@ -113,11 +111,11 @@ function loggingIdentity<T>(arg: T): T {
 
 When we do, the compiler will give us an error that we’re using the `.length` member of `arg`, but nowhere have we said that `arg` has this member. Remember, we said earlier that these type variables stand in for any and all types, so someone using this function could have passed in a `number` instead, which does not have a `.length` member.
 
-但很不幸的是, 当我们这么写时, 编译器会报错, 因为在我们使用 `arg` 的 `.length` 成员时, 并没有任何地方可以表明 `arg` 是有 `.length` 成员的. 记住, 我们先前说的类型变量代表所有的类型, 因此某个人在使用这个函数的时候可能传入的是 `number` 类型, 它就没有 `.length` 成员.
+但很不幸的是, 当我们这么写的时候, 编译器会因为我们使用了 `arg` 的 `length` 而报错, 因为我们并没有在任何地方表明 `arg` 是有 `.length` 成员的. 记住, 我们先前说的类型变量囊括了所有类型, 因此某人在使用这个函数的时可能传入的是 `number` 类型, 它就没有 `.length` 成员.
 
 Let’s say that we’ve actually intended this function to work on arrays of `T` rather than `T` directly. Since we’re working with arrays, the `.length` member should be available. We can describe this just like we would create arrays of other types:
 
-假设我们实际上希望这个函数能够直接处理 `T` 的数组而不是 `T`. 因为我们希望使用数组, 因此就有可以使用 `.length` 成员. 我们可以像描述其他类型的数组一样描述这个数组:
+实际上我们希望这个函数能够直接处理 `T` 的数组而不是单个的 `T` 类型. 由于我们现在要使用数组作为参数, 因此它的 `.length` 成员就是可用的. 我们可以像描述其他类型的数组一样描述这个数组:
 
 ```ts
 function loggingIdentity<T>(arg: T[]): T[] {
@@ -128,7 +126,9 @@ function loggingIdentity<T>(arg: T[]): T[] {
 
 You can read the type of `loggingIdentity` as “the generic function `loggingIdentity` takes a type parameter `T`, and an argument `arg` which is an array of `T`s, and returns an array of `T`s.” If we passed in an array of numbers, we’d get an array of numbers back out, as `T` would bind to `number`. This allows us to use our generic type variable `T` as part of the types we’re working with, rather than the whole type, giving us greater flexibility.
 
-你可以这样理解上面的代码: "泛型函数 `loggingIdentity` 接收一个类型参数 `T`, 一个类型为 `T` 的数组的函数参数 `arg`, 返回一个数组项类型为 `T` 的数组". 如果我们传入一个 `number` 的数组, 我们得到的输出就也是 `number` 类型的数组, 因为 `T` 的类型在这里就是 `number`. 这允许我们使用泛型类型变量 `T` 作为类型的一部分参与到代码中, 而不是所有的类型都可以用. 这个我们带来了巨大的灵活性.
+你可以这样理解上面的代码:  "泛型函数 `loggingIdentity` 接收一个类型参数 `T`, 一个类型为 `T` 数组的函数参数 `arg`, 返回一个 `T` 的数组". 如果我们传入一个 `number` 的数组, 我们得到的输出也是 `number` 类型的数组, 因为 `T` 的类型在这里就是 `number`. 这允许我们使用泛型类型变量 `T` 作为类型的一部分参与到代码中, 而不是所有的类型都可以用. 这个我们带来了巨大的灵活性.
+
+--------------------------  二次审查到这里
 
 We can alternatively write the sample example this way:
 
