--- a/Nodejs-learning/pm2/9.pm2.doc.easy-deploy-with-ssh.md
+++ b/Nodejs-learning/pm2/9.pm2.doc.easy-deploy-with-ssh.md
@@ -164,3 +164,71 @@ pm2 deploy ecosystem.json production --force
 - 你可以在 package.json 中嵌入 “apps” & “deploy” 段（section）。
 
 ## SSH克隆错误（SSH clone errors）
+
+In most cases, these errors will be caused by `pm2` not having the correct keys to clone your repository. You need to verify at every step that the keys are available.
+
+大多数情况，导致这些错误的原因是 `pm2` 没有正确的公钥来克隆你的仓库。你需要在每个步都骤确保密钥可用。
+
+**Step 1** If you are certain your keys are correctly working, first try running git clone your_repo.git on the target server. If it succeeds, move onto the next steps. If it failed, make sure your keys are stored both on the server and on your git account.
+
+**第一步** 如果你确定你的公钥没有问题，先尝试在目标服务器上执行 git clone。如果成功了，就移步下一步。如果失败了，请确保你的公钥已经被存放在了目标主机和 git 服务器上。
+
+**Step 2** By default `ssh-copy-id` copies the default identiy, usually named `id_rsa`. If that is not the appropriate key:
+
+**第二步** 默认情况下，`ssh-copy-id` 复制的是默认的标识符，通常名为 `id_rsa`。如果那不是正确的公钥则使用如下命令：
+
+```sh
+ssh-copy-id -i path/to/my/key your_username@server.com
+```
+
+This adds your public key to the `~/.ssh/authorized_keys` file.
+
+这会将你的公钥添加到 `~/.ssh/authorized_keys` 文件中。
+
+**Step 3** If you get the following error:
+
+**第三步** 如果你得到下面的错误：
+
+```sh
+--> Deploying to production environment
+--> on host mysite.com
+  ○ hook pre-setup
+  ○ running setup
+  ○ cloning git@github.com:user/repo.git
+Cloning into '/var/www/app/source'...
+Permission denied (publickey).
+fatal: Could not read from remote repository.
+
+Please make sure you have the correct access rights and that the repository exists.
+
+**Failed to clone**
+
+Deploy failed
+```
+
+…you may want to create a ssh config file. This is a sure way to ensure that the correct ssh keys are used for any given repository you’re trying to clone. See [this example](https://gist.github.com/Protosac/c3fb459b1a942f161f23556f61a67d66):
+
+你也许希望创建一个 ssh 配置文件。这是确保正在尝试克隆的任何给定存 git 仓库能够使用正确的 ssh 密钥的可靠方法。
+
+```sh
+# ~/.ssh/config
+Host alias
+    HostName myserver.com
+    User username
+    IdentityFile ~/.ssh/mykey
+# Usage: `ssh alias`
+# Alternative: `ssh -i ~/.ssh/mykey username@myserver.com`
+
+Host deployment
+    HostName github.com
+    User username
+    IdentityFile ~/.ssh/github_rsa
+# Usage:
+# git@deployment:username/anyrepo.git
+# This is for cloning any repo that uses that IdentityFile. This is a good way to make sure that your remote cloning commands use the appropriate key
+```
+
+## Windows 的情况（Windows Consideration）
+
+To run the deploy script under Windows, you need to use a unix shell like bash, so we recommend to install either [Git bash](https://git-scm.com/download/win), [Babun](http://babun.github.io/) or [Cygwin](https://cygwin.com/install.html)
+
