--- a/Nodejs-learning/pm2/9.pm2.doc.easy-deploy-with-ssh.md
+++ b/Nodejs-learning/pm2/9.pm2.doc.easy-deploy-with-ssh.md
@@ -10,7 +10,7 @@ PM2 部署工具的目的就是将这个流程自动化。
 
 You set an array of distant hosts, a pre-deploy/post-deploy command line action, and you are done.
 
-你需要设置一个远程主机列表，一个预部署（pre-deploy）/部署（post-deploy） 命令行操作，然后就完成了。
+你需要设置一个远程主机列表，一个 预部署（pre-deploy）/部署（post-deploy） 的命令行操作（集合），然后就完成了。
 
 ## 安装（Installation）
 
@@ -82,7 +82,7 @@ module.exports = {
 
 Make your first deploy and populate the distant path with:
 
-开始你的第一次部署，将远程路径填充为：
+填充好远程路径等，就可以开始你的首次部署了：
 
 ```sh
 pm2 deploy production setup
@@ -167,15 +167,15 @@ pm2 deploy ecosystem.json production --force
 
 In most cases, these errors will be caused by `pm2` not having the correct keys to clone your repository. You need to verify at every step that the keys are available.
 
-大多数情况，导致这些错误的原因是 `pm2` 没有正确的公钥来克隆你的仓库。你需要在每个步都骤确保密钥可用。
+大多数情况，导致这些错误的原因是 `pm2` 没有正确的密钥来克隆你的仓库。你需要在每个步都骤确保密钥可用。
 
 **Step 1** If you are certain your keys are correctly working, first try running git clone your_repo.git on the target server. If it succeeds, move onto the next steps. If it failed, make sure your keys are stored both on the server and on your git account.
 
-**第一步** 如果你确定你的公钥没有问题，先尝试在目标服务器上执行 git clone。如果成功了，就移步下一步。如果失败了，请确保你的公钥已经被存放在了目标主机和 git 服务器上。
+**第一步** 如果你确定你的密钥没有问题，先尝试在目标服务器上执行 git clone。如果成功了，就移步下一步。如果失败了，请确保你的密钥已经被存放在了目标主机和 git 服务器上。
 
 **Step 2** By default `ssh-copy-id` copies the default identiy, usually named `id_rsa`. If that is not the appropriate key:
 
-**第二步** 默认情况下，`ssh-copy-id` 复制的是默认的标识符，通常名为 `id_rsa`。如果那不是正确的公钥则使用如下命令：
+**第二步** 默认情况下，`ssh-copy-id` 复制的是默认的标识符，通常名为 `id_rsa`。如果那不是正确的密钥则使用如下命令：
 
 ```sh
 ssh-copy-id -i path/to/my/key your_username@server.com
@@ -208,7 +208,7 @@ Deploy failed
 
 …you may want to create a ssh config file. This is a sure way to ensure that the correct ssh keys are used for any given repository you’re trying to clone. See [this example](https://gist.github.com/Protosac/c3fb459b1a942f161f23556f61a67d66):
 
-你也许希望创建一个 ssh 配置文件。这是确保正在尝试克隆的任何给定存 git 仓库能够使用正确的 ssh 密钥的可靠方法。
+你也许希望创建一个 ssh 配置文件。这是确保正在尝试进行克隆的任何给定 git 仓库能够使用正确的 ssh 密钥的一种可靠方法。
 
 ```sh
 # ~/.ssh/config
