--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -66,3 +66,91 @@ alert(book.edition); // 2
 
 
 ## 6.2 创建对象 P144
+
+由于 Object 构造函数或者对象字面量都可以用来创建单个对象会产生大量重复的代码，为了解决这个问题，人们开始使用工厂模式：
+
+### 工厂模式
+
+工厂模式抽象了创建具体对象的过程，考虑到 ECMAScript 中无法创建类（ES5 截止还没有 `class` 产生），开发人员就发明了一种用来封装创建特定对象细节的函数，如：
+
+```js
+function createPerson(name, age, job) {
+  var o = new Object();
+  o.name = name;
+  o.age = age;
+  o.job = job;
+  o.sayName = function() {
+    alert(this.name);
+  };
+  return o;
+}
+
+var person1 = createPerson('Nicholas', 29, 'Software Engineer');
+var person2 = createPerson('Greg', 27, 'Doctor');
+```
+
+工厂模式虽然解决了创建多个相似对象的问题，却没有解决对象的识别问题 —— 怎样知道一个对象的类型。因此又出现了一个新的模式。
+
+### 构造函数模式
+
+使用构造函数模式重写工厂模式中的例子：
+
+```js
+function Person(name, age, job) {
+  this.name = name;
+  this.age = age;
+  this.job = job;
+  this.sayName = function(){
+    alert(this.name);
+  }
+}
+var person1 = Person('Nicholas', 29, 'Software Engineer');
+var person2 = Person('Greg', 27, 'Doctor');
+```
+
+与工厂模式区别在于：
+
+- 没有显示创建对象
+- 直接将属性和方法赋值给了 `this`
+- 没有 `return` 语句
+- 使用 `new` 操作符创建实例
+
+创建实例时，必须使用 `new` 操作符，它会经历以下四步：
+- 创建一个新对象
+- 将构造函数的作用域赋给新对象（因此 `this` 就指向这个新对象）
+- 执行构造函数中的代码
+- 返回新对象
+
+在构造函数模式中创建的两个实例都有一个 `constructor` 属性，该属性指向 Person，因此 
+```js
+person1.constructor === Person; // true
+person2.constructor === Person; // true
+```
+
+对象的 `constructor` 属性最初是用来标识对象类型的，不过检测对象类型还是使用 `instanceof` 操作符更可靠。
+
+```js
+person1 instanceof Object; // true
+person1 instanceof Person; // true
+// person2 也是如此
+```
+
+构造函数模式可以将它们创建的对象标识为自定义的类型，因此它胜过了工厂模式。但是它也有自己的问题，那就是每个函数都有一个自己的 sayName 方法（因为 JavaScript 中函数也是对象），这完全是没有必要的，可以如下优化：
+
+```js
+function Person(name, age, job) {
+  this.name = name;
+  this.age = age;
+  this.job = job;
+  this.sayName = sayName;
+}
+
+// 将 sayName 提炼出来，而不是每个对象都有一个自己的 sayName
+function sayName(){
+    alert(this.name);
+}
+var person1 = Person('Nicholas', 29, 'Software Engineer');
+var person2 = Person('Greg', 27, 'Doctor');
+```
+
+这样优化带来的问题也显而易见，也就是会创建太多像 sayName 一样的全局函数，因此，又出现了一种模式 —— 原型模式。
