--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -154,3 +154,189 @@ var person2 = Person('Greg', 27, 'Doctor');
 ```
 
 这样优化带来的问题也显而易见，也就是会创建太多像 sayName 一样的全局函数，因此，又出现了一种模式 —— 原型模式。
+
+### 6.2.3 原型模式
+
+#### 1. 理解原型对象
+
+无论什么时候，只要创建了一个新函数，就会根据一组特定规则为该函数创建一个 prototype 属性，这个属性指向函数的原型对象。默认情况下，所有原型对象都会自动获得一个 constructor 属性，这个属性为一个指向当前 prototype 属性的函数指针，即 Person.prototype.constructor 指向 Person。
+
+每创建一个函数，就会同时创建它的原型对象 prototype，该原型对象默认（只）会得到一个 constructor 属性，其他方法都是从 Object 继承而来。
+
+```js
+function A () {}
+// 因为 A 是 Function 的一个实例对象，因此 A.constructor === Function.prototype.constructor === Function.constuctor 即在 Chrome 中输出 ƒ Function() { [native code] }
+A.constructor;  // ƒ Function() { [native code] }   
+A.prototype.constructor;  // ƒ A () {}
+```
+
+使用构造函数创建实例过后，实例内部包含一个指向构造函数的原型的内部指针 —— `[[Prototype]]`。虽然在脚本中没有标准方式访问 `[[Prototype]]`，但是 Firefox、Safari 和 Chrome 在每个对象上都支持一个 `__proto__` 属性，而在其它实现中，这个属性对脚本则是完全不可见的，如：
+
+```js
+function  A (){}
+var a = new A;
+a.__proto__;  // 在实现了的浏览器上输出原型对象，如 {constructor: ƒ} ， 在未实现的浏览器上（如 IE 11 之前）则为 undefined
+```
+
+因此，你可能会在 TypeScript 编译文件中发现对 `__proto__` 属性的检测：
+
+```ts
+declare class B {}
+
+class A extends B {
+}
+```
+
+编译后：
+
+```js
+var __extends = (this && this.__extends) || (function () {
+    var extendStatics = function (d, b) {
+        extendStatics = Object.setPrototypeOf ||
+            ({ __proto__: [] } instanceof Array && function (d, b) { d.__proto__ = b; }) ||
+            function (d, b) { for (var p in b) if (b.hasOwnProperty(p)) d[p] = b[p]; };
+        return extendStatics(d, b);
+    }
+    return function (d, b) {
+        extendStatics(d, b);
+        function __() { this.constructor = d; }
+        d.prototype = b === null ? Object.create(b) : (__.prototype = b.prototype, new __());
+    };
+})();
+var A = /** @class */ (function (_super) {
+    __extends(A, _super);
+    function A() {
+        return _super !== null && _super.apply(this, arguments) || this;
+    }
+    return A;
+}(B));
+```
+
+其中 `({ __proto__: [] } instanceof Array && function (d, b) { d.__proto__ = b; })` 这段代码即是检测 `__proto__` 属性是否在当前浏览器环境中有实现：
+
+```js
+({ __proto__: [] }) instanceof Array;  // 在实现了 __proto__ 的浏览器上为 true，在未实现的浏览器上（如 IE11 之前）即为 false
+```
+如果有实现则执行 `d.__proto__ = b` 完成继承的部分阶段。
+
+**需要注意的是：关于原型链的连接存在于实例与构造函数的原型对象之间，而不是存在于实例与构造函数之间。**
+
+
+虽然在所有实现中都无法访问到 `[[Prototype]]`，但是可以通过 `isPrototypeOf()` 方法来确定对象之间是否存在这种关系：
+
+```js
+Person.prototype.isPrototypeOf(person1); // true
+Person.prototype.isPrototypeOf(person2); // true
+```
+
+ECMAScript 5 新增了一个方法 —— `Object.getPrototypeOf()`，该方法返回 `[[Prototype]]` 的值：
+
+```js
+// 该方法支持的浏览器为：IE9+，Firefox 3.5+，Safari 5+，Opera 12+ 和 Chrome
+Object.getPrototypeOf(person1) === Person.prototype; // true
+```
+
+**另外一个需要注意的地方就是，访问属性会遍历原型，但是设置属性就与原型无关了，因为设置属性时会直接将属性设置在对象实例上而不会遍历原型去寻找同名的对象，因此给对象实例设置属性时会屏蔽原型中的同名属性，此时再次读取值时，由于当前实例上已经存在该属性，因此也不会遍历原型，这就是所谓的屏蔽。但是当在实例上调用 delete 删除掉该属性后，原型链上的同名属性又暴露出来了。**
+
+**ECMAScript 5 的 `Object.getOwnPropertyDescriptor()` 只能用于实力属性，如果要取得原型属性的描述符，则必须直接在原型对象上调用 `Object.getOwnPropertyDescriptor()` 方法**
+
+#### 2. 原型与 `in` 操作符
+
+有两种方式使用 in 操作符：
+- 单独使用 `in` 操作符：只要通过该实例能够访问到属性时（无论是实例属性还是原型属性），`in` 就返回 `true`，因此更多的场合可能需要结合 `hasOwnProperty()` 方法来判断当前属性是实例属性还是原型属性。
+- 在 `for-in` 中使用：返回所有可以通过对象访问的（无论是实例属性还是原型属性）、可枚举的属性。屏蔽了原型中不可枚举属性的实力属性也会在 `for-in` 中返回，因为根据规定，所有开发人员定义的属性都是可枚举的 —— IE8 及更早版本中例外（P153）。
+
+
+可以代替 `for-in` 的方法：
+- `Object.keys()`：该方法返回所有可枚举的实例属性（非原型属性）
+- `Object.getOwnPropertyNames()`：该方法返回所有实例属性（非原型属性、与是否可枚举无关）
+
+支持 `Object.keys()` 和 `Object.getOwnPropertyNames()` 的浏览器有 IE 9+，Firefox 4+， Safari 5+，Opera 12+ 和 Chrome
+
+#### 3. 更简单的原型语法
+
+```js
+function Person(){}
+
+Person.prototype = {
+  name: 'Nicholas',
+  age: 29,
+  job: 'Software Engineer',
+  sayName: function() {
+    alert(this.name);
+  }
+};
+```
+
+这样直接改写 prototype 属性，此时尽管 instanceof 操作符还能返回正确结果，但是此时 constructor 已经变成了新的对象的 constructor，此时通过 constructor 已经无法确定对象的类型了，如果 constructor 真的很重要，则需要对它进行设置：
+
+
+```js
+function Person(){}
+
+Person.prototype = {
+  constructor: Person, // +
+  name: 'Nicholas',
+  age: 29,
+  job: 'Software Engineer',
+  sayName: function() {
+    alert(this.name);
+  }
+};
+```
+
+这样虽然设置了正确的 constructor 值，但是它的描述符属性 `[[Enumerable]]` 变为了 true，如果想要兼容这一点，可以使用 `Object.defineProperty()` 方法：
+
+```js
+// ...
+Object.defineProperty(Person.prototype, 'constructor', {
+  enumerable: false,
+  value: Person
+});
+// ...
+```
+
+由于原型模式是直接将初始值赋值到原型链 prototype 对象上，会导致对一些引用类型的初始值的修改在各个实例之间进行共享，并且实例一般都需要有自己的全部属性（排除函数），因此很少有人单独使用原型模式。此时我们可以将原型模式与前面的模式进行结合使用 —— 组合使用构造函数模式和原型模式。
+
+#### 6.2.4 组合使用构造函数模式和原型模式
+
+```js
+function Person (name, age, job) {
+  this.name = name;
+  this.age = age;
+  this.job = job;
+  this.friends = ['Shelby', 'Court'];
+}
+
+Person.prototype = {
+  constructor: Person,
+  sayName: function () {
+    alert(this.name);
+  }
+}
+```
+
+这种构造函数与原型混成的模式，是目前在 ECMAScript 中使用最广泛、认同度最高的一种创建自定义类型的方法。可以说，这是用来定义引用类型的一种默认模式。
+
+#### 6.2.5 动态原型模式
+
+其他 OO 语言的开发人员看到前面那种构造函数和原型分离的情况会非常困惑，因此动态原型模式就是为了解决这个问题：
+
+```js
+function Person (name, age, job) {
+  this.name = name;
+  this.age = age;
+  this.job = job;
+  if (typeof this.sayName != 'function') {
+    Person.prototype.sayName = function () {
+      alert(this.name);
+    }
+  }
+}
+```
+
+该模式只是将组合构造函数模式和原型模式写在了一起，看起来混为一体。
+
+#### 6.2.6 寄生构造函数模式
+
+#### 6.2.7 稳妥构造函数模式
