--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -339,4 +339,61 @@ function Person (name, age, job) {
 
 #### 6.2.6 寄生构造函数模式
 
+该模式实际上就是通过 new 操作符调用工厂模式的函数（工厂模式是将函数作为函数调用，而这里是使用 new 操作符来调用函数，并且把函数称之为构造函数），并没有其他差别。
+
+这种模式可以在特殊情况下用来为对象创建构造函数，比如想创建一个具有额外方法的特殊数组又不修改 Array 构造函数：
+
+```js
+function SpecialArray() {
+
+  // 创建数组
+  var values = new Array();
+
+  // 添加值
+  values.push.apply(values, argumens);
+
+  // 添加方法
+  values.toPipedString = function () {
+    return this.join('|');
+  };
+
+  return values;
+}
+
+```
+
+需要说明一点：返回的对象与构造函数或者与构造函数的原型属性之间没有关系。也就是说，构造函数返回的对象与在构造函数外部创建的对象没有什么不同。因此不能依赖 instanceof 操作符来确定对象类型。
+
 #### 6.2.7 稳妥构造函数模式
+
+所谓稳妥对象，指没有公共属性，且其方法也不引用 this 对象。稳妥对象最适合在一些安全的环境中（这些环境中会禁用 this 和 new），或者在防止数据被其他应用程序改动时使用。稳妥构造函数遵循与寄生构造函数类似的模式，但有两点不同：
+
+- 新创建对象的实例方法不引用 this
+- 不适用 new 操作符调用构造函数
+
+```js
+function Person (name, age, job) {
+
+  // 创建要返回的对象
+  var o = new Obejct();
+
+  // 可以在这里定义私有变量和函数
+
+  // 添加方法
+
+  o.sayName = function () {
+    alert(name);
+  }
+
+  return o;
+}
+```
+
+这种模式的对象中，除了使用 sayName() 方法之外，没有其他办法可以访问 name 的值。可以像下面这样使用稳妥的 Person 构造函数：
+
+```js
+var friend = Person('Nicholas', 29, 'Software Engineer');
+friend.sayName(); // Nicholas
+```
+
+## 6.3 继承
