--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -121,7 +121,7 @@ var person2 = Person('Greg', 27, 'Doctor');
 - 执行构造函数中的代码
 - 返回新对象
 
-在构造函数模式中创建的两个实例都有一个 `constructor` 属性，该属性指向 Person，因此 
+在构造函数模式中创建的两个实例都有一个 `constructor` 属性，该属性指向 Person，因此
 ```js
 person1.constructor === Person; // true
 person2.constructor === Person; // true
@@ -166,7 +166,7 @@ var person2 = Person('Greg', 27, 'Doctor');
 ```js
 function A () {}
 // 因为 A 是 Function 的一个实例对象，因此 A.constructor === Function.prototype.constructor === Function.constuctor 即在 Chrome 中输出 ƒ Function() { [native code] }
-A.constructor;  // ƒ Function() { [native code] }   
+A.constructor;  // ƒ Function() { [native code] }
 A.prototype.constructor;  // ƒ A () {}
 ```
 
@@ -397,3 +397,269 @@ friend.sayName(); // Nicholas
 ```
 
 ## 6.3 继承
+
+### 6.3.1 原型链
+
+```js
+function SuperType(){
+  this.property = true;
+}
+
+
+SuperType.prototype.getSuperValue = function (){
+  return this.property;
+}
+
+function SubType(){
+  this.subproperty = false;
+}
+
+// 继承了 SuperType
+SubType.prototype = new SuperType();
+
+SubType.prototype.getSubValue = function (){
+  return this.subproperty;
+}
+
+var instance = new SubType();
+
+instance.getSuperValue(); // true
+instance instanceof SubType; // true
+instance instanceof SuperType; // true
+instance instanceof Object; // true
+```
+
+个人总结： `instanceof` 检测第一层时，会判断第一级原型是否为类型的原型，如 `instance instanceof SubType;` 检查 instance 的原型对象是否与 SubType 的原型对象一致，后续使用原型链中出现的 constructor 进行判断。（待验证）
+
+#### 4. 原型链的问题
+
+原型链虽然很强大，可以用来实现继承，但是它也存在一些问题：
+
+- 1. 最主要的问题来自于包含引用类型的原型。
+
+前面说到，引用类型的原型属性会被所有实例共享，因此我们需要在构造函数中定义属性而非原型对象上定义属性。但是在通过原型来实现继承时，原型实际上就是另一个类型的实例，原先的实例属性也就顺理成章的变成了后来的原型属性，因此又会暴露出原型的引用类型属性这个问题。
+
+- 2. 在创建子类型的实例时，不能向超类型的构造函数中传递参数。实际上，应该说是没有办法在不影响所有对象实例的情况下，给超类型的构造函数传递参数。
+
+鉴于这些问题，因此很少会单独使用原型链。
+
+### 6.3.2 借用构造函数
+
+在解决原型链问题的过程中，人们开始使用一种叫做借用构造函数（constructor stealing）的技术（有时候也叫做伪造对象或经典继承）。其思想很简单 —— 在子类型的构造函数内部调用超类型的构造函数（因为函数只是能够在特定环境中执行代码的对象，因此可以通过 call 或者 apply 在新创建的对象上执行构造函数）。
+
+```js
+function SuperType() {
+  this.colors = ['red', 'blue', 'green'];
+}
+
+function SubType() {
+  // 继承了 SuperType
+  SuperType.call(this);  // 可以传递参数
+}
+
+var instance1 = new SubType();
+instance1.colors.push('black');
+instance1.colors; // ['red', 'blue', 'green', 'black']
+
+var instance2 = new SubType();
+instance2.colors; // ['red', 'blue', 'green']
+```
+
+#### 1. 传递参数
+
+相对于原型链而言，借用构造函数有一个很大的优势就是能够通过子类型的构造函数向超类型的构造函数传递参数。
+
+#### 2. 借用构造函数的问题
+
+如果仅仅是借用构造函数，那么也将无法避免构造函数模式存在的问题 —— 方法都在构造函数中定义，因此函数复用就无从谈起了。并且在超类型的原型中定义的方法，对子类型来说也是不可见的，结果所有类型都只能使用构造函数模式。考虑到这些问题，借用构造函数也很少单独使用。
+
+### 6.3.3 组合继承（combination inheritance）
+
+组合继承，有时候也被称为伪经典继承，它是将原型链和借用构造函数的技术组合到一块，发挥二者之长的一种继承模式。
+
+
+```js
+function SuperType(name){
+  this.name = name;
+  this.colors = ['red', 'blue', 'green'];
+}
+
+SuperType.prototype.sayName = function () {
+  alert(this.name);
+};
+
+function SubType(name, age) {
+  // 继承属性
+  SuperType.call(this, name);
+  this.age = age;
+}
+
+// 继承方法
+SubType.prototype = new SuperType();
+SubType.prototype.constructor = SubType;  // constructor 指回构造函数
+SubType.prototype.sayAge = function() {
+  alert(this.age);
+};
+
+var instance1 = new SubType('Nicholas', 29);
+instance1.colors.push('black');
+alert(instance1.colors);  // 'red,blue,green,black'
+instance1.sayName();  // 'Nicholas'
+instance1.sayAge();  // 29
+
+var instance2 = new SubType('Greg', 27);
+alert(instance2.colors);  //'red,blue,green'
+instance2.sayName();  // 'Greg'
+instance2.sayAge();  // 27
+```
+
+### 6.3.4 原型式继承
+
+道格拉斯·克罗克福德 在 2006 年写了一篇名为 《Prototypal Inheritance in JavaScript》 的文章。他介绍了一种实现继承的方法，这种方法并没有使用严格意义上的构造函数。他的想法是借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型。
+
+```js
+function object(o) {
+  function F (){};
+  F.prototype = o;
+  return new F();
+}
+```
+
+克罗克福德主张的这种原型式继承，要求你必须有一个对象可以作为另一个对象的基础。
+
+ECMAScript 5 通过新增 Object.create() 方法规范化了原型式继承。这个方法接收两个参数：
+- 一个用作新对象原型的对象（可选）
+- 一个为新对象定义额外属性的对象。
+
+在传入一个参数的情况下， Object.create() 与 object() 方法的行为相同。
+
+```js
+var person = {
+  name: 'Nicholas',
+  friends: ['Shelby', 'Court', 'Van'];
+};
+
+var anotherPerson = Object.create(person);
+anotherPerson.name = 'Greg';
+anotherPerson.friends.push('Rob');
+
+var yetAnotherPerson = Object.create(person);
+yetAnotherPerson.name = 'Linda';
+yetAnotherPerson.friends.push('Barbie');
+
+alert(person.frineds); // 'Shelby,Court,Van,Rob,Barbie'
+```
+
+Object.create() 方法的第二个参数与 Object.defineProperties() 方法的第二个参数格式相同：每个属性都是通过自己的描述符定义的，这种方式指定的任何属性都会覆盖原型对象上的同名属性：
+
+```js
+var person = {
+  name: 'Nicholas',
+  friends: ['Shelby', 'Court', 'Van'];
+};
+
+var anotherPerson = Object.create(person, {
+  name: {
+    value: 'Greg'
+  }
+});
+
+alert(anotherPerson.name); // 'Greg'
+```
+
+支持 Object.create() 方法的浏览器有 IE 9+，Firefox 4+，Safari 5+， Opera 12+ 和 Chrome。
+
+在没必要兴师动众的创建构造函数，而只想让一个对象与另一个对象保持类似的情况下，原型式继承是完全能够胜任的。不过不要忘了，包含引用类型值的属性始终都会共享相应的值，就像使用原型模式一样。
+
+### 6.3.5 寄生式继承（parasitic）
+
+寄生式继承与原型式继承紧密相关的一种思路。并且同样也是由克罗克福德推而广之。
+
+寄生式继承的思路与寄生构造函数和工厂模式类似，即创建一个仅用于封装继承过程的函数，该函数在内部以某种方式来增强对象，最后再像真的是它做了所有工作一样返回对象。
+
+```js
+function createAnother(original) {
+  var clone = object(original);  // 通过调用函数创建一个新对象
+  clone.sayHi = function() {  // 以某种方式来增强这个对象，比如这里添加方法
+    alert('hi');
+  };
+  return clone;
+}
+```
+
+在主要考虑对象而不是自定义类型和构造函数的情况下，寄生式继承也是一种有用的模式。前面示范继承模式时使用的 object() 函数不是必须的，任何能够返回新对象的函数都适用于此模式。
+
+**使用寄生式继承来为对象添加函数，会由于不能做到函数复用而降低效率；这一点与构造函数模式类似。**
+
+### 6.3.6 寄生组合式继承
+
+      个人总结：寄生组合式继承的做法实际上就是用超类的 prototype 对象的一个副本作为子类的 prototype，然后将 constructor 指回子类构造函数。与组合继承的区别在于组合继承是使用超类的实例来作为子类的 prototype 对象，而寄生组合式继承是使用超类的 prototype 副本作为子类的 prototype 对象。
+
+组合继承是 JavaScript 最常用的继承模式，不过它也有自己的不足 —— 无论什么情况下，都会调用两次超类构造函数：
+- 在创建子类型的时候
+- 在子类型构造函数内部
+
+```js
+function SuperType(name) {
+  this.name = name;
+  this.colors = ['red', 'blue', 'green'];
+}
+
+SuperType.prototype.sayName = function() {
+  alert(this.name);
+}
+
+function SubType (name, age) {
+  SuperType.call(this, name);  // 第二次调用 SuperType()
+  this.age = age;
+}
+
+SubType.prototype = new SuperType();  // 第一次调用 SuperType()
+SubType.prototype.constructor = SubType;
+SubType.prototype.sayAge = function() {
+  alert(this.age);
+};
+```
+
+第一次调用 SuperType 会在 SubType 的原型上增加两个属性 —— name 和 colors；第二次调用 SuperType 会在 SubType 的实例上创建同样的两个属性 —— name 和 colors；这样产生了两组 name 和 colors 属性，一组在原型上，一组在实例上，这就是调用两次 SuperType 构造函数的结果，好在我们已经找到了解决这个问题的方法 —— 寄生组合式继承。
+
+所谓寄生组合式继承，即使通过借用构造函数来继承属性，通过原型链的混成形式来继承方法。背后的基本思路是：不必为了指定子类型的原型而调用超类型的构造函数。我们所需要的无非就是超类型原型的一个副本而已。本质上就是使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型。寄生组合式继承的基本模式如下：
+
+```js
+function inheritPrototype (subType, superType) {
+  var prototype = object(superType.prototype);
+  prototype.construtor = subType;
+  subType.prototype = prototype;
+}
+```
+
+这是一个实现了寄生组合式继承最简单的例子，它接收两个参数 —— 子类型构造函数和超类型构造函数，经历三个步骤：
+- 创建超类型原型链的副本
+- 为创建的副本添加 constructor 属性，弥补重写原型导致默认 constructor 丢失的问题
+- 将新创建的对象赋值给子类型的原型
+
+此时，我们就可以使用 inheritPrototype 函数替换前面例子中为子类型原型赋值的语句了：
+
+```js
+function SuperType(name) {
+  this.name = name;
+  this.colors = ['red', 'blue', 'green'];
+}
+
+SuperType.prototype.sayName = function() {
+  alert(this.name);
+};
+
+function SubType(name, age) {
+  SuperType.call(this, name);
+  this.age = age;
+}
+
+inheritPrototype(SubType, SuperType);
+
+SubType.prototype.sayAge = function () {
+  alert(this.age);
+};
+```
+
+这个例子高效之处体现在它只调用了一次 SuperType 构造函数，并且因此避免了在 SubType.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变，因此还能够正常使用 instanceof 和 isPrototypeOf()。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式。
