--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -593,7 +593,7 @@ function createAnother(original) {
 
 ### 6.3.6 寄生组合式继承
 
-      个人总结：寄生组合式继承的做法实际上就是用超类的 prototype 对象的一个副本作为子类的 prototype，然后将 constructor 指回子类构造函数。与组合继承的区别在于组合继承是使用超类的实例来作为子类的 prototype 对象，而寄生组合式继承是使用超类的 prototype 副本作为子类的 prototype 对象。
+      个人总结：寄生组合式继承的做法实际上就是用超类的 prototype 对象的一个副本作为子类的 prototype，然后将 constructor 指回子类构造函数。与组合继承的区别在于组合继承是使用超类的实例来作为子类的 prototype 对象，而寄生组合式继承是使用超类的 prototype 副本作为子类的 prototype 对象。（一言以蔽之：我们并不需要一个超类的实例作为原型，我们只需要它的 prototype 作为子类的prototype，这样做就只会调用一次超类函数，并且不会导致超类的实例属性出现在原型对象上）
 
 组合继承是 JavaScript 最常用的继承模式，不过它也有自己的不足 —— 无论什么情况下，都会调用两次超类构造函数：
 - 在创建子类型的时候
