--- a/Javascript-learning/JavaScript高级程序设计/10.DOM.md
+++ b/Javascript-learning/JavaScript高级程序设计/10.DOM.md
@@ -77,3 +77,62 @@ if (someNode.nextSibling === null) {
 另外，`hasChildNodes()` 也是一个非常有用的方法，这个方法在节点包含一个或多个子节点的情况下返回 true；应该说，这是比查询 childNodes 列表的 length 属性更简单的方法。
 
 **所有节点都有的**最后一个属性是 `ownerDocument`，该属性指向表示整个文档的文档节点。通过这个属性，我们可以不必在节点层次中层层回溯到达顶端，而是可以直接访问文档节点。
+
+#### 操作节点
+
+- appendChild() 用于向 childNodes 列表的末尾添加一个节点，返回新增的节点。添加节点后，childNodes 新增节点、父节点及以前的最后一个子节点的关系指针都会相应的更新。如果传入的节点已经是文档的一部分，则结果就是将该节点从原来的位置转移到新位置。因此可以使用 appendChild() 直接将元素 childNodes 中第一个元素移动到最后一个元素去。
+
+```js
+//  someNode 有多个子节点
+var returnedNode = someNode.appendChild(someNode.firstChild);
+returnedNode == someNode.firstChild; // false
+returnedNode == someNode.lastChild;  // true
+```
+
+- insertBefore() 将节点放在 childNodes 中的特定位置上，返回插入元素。参数为要插入的节点和作为参照的节点。如果参照节点是 `null`，则 insertBefore() 和 appendChild() 执行相同的操作。
+
+```js
+returnedNode = someNode.insertBefore(newNode, null);
+newNode == someNode.lastChild;  // true
+```
+
+- replaceChild() 使用插入节点替换指定节点，返回替换的节点并从文档树中被移除。参数为插入的节点和要替换的节点。
+
+```js
+// 替换第一个节点
+var returnedNode = someNode.replaceChild(newNode, someNode.firstChild);
+```
+
+- removeChild() 移除并返回节点。
+
+#### 其他方法
+
+有两个方法是所有类型的节点都有的。
+
+- cloneNode() 创建调用该方法节点的一个完全相同的副本。它接受一个布尔值作为参数，表示是否执行深复制。在参数为 true 时执行深复制。
+  - true：执行深复制。它会复制节点及其整个子节点树。
+  - false：执行浅复制。
+
+复制的节点属于文档所有，但是并没有为它指定父节点，因此这个副本节点就成了一个孤儿。需要通过 appendChild()、insertBefore() 或者 replaceChild() 将它添加到文档中。
+
+
+```html
+<ul id="list">
+  <li>item 1</li>
+  <li>item 2</li>
+  <li>item 3</li>
+  <li>item 4</li>
+</ul>
+```
+
+```js
+var list = document.getElementById('list');
+
+var deepList = list.cloneNode(true);
+deepList.childNodes.length;  // 3（IE < 9）或 7 （其他浏览器），这里的差异主要是因为 IE 8 机器更早版本与其他浏览器处理空白字符的方式不一样
+
+var shallowList = list.cloneNode(false);
+shallowList.childNodes.length;  // 0
+```
+
+- normalize() 方法唯一的作用就是处理文档树中的文本节点。由于解析器的实现或 DOM 操作的原因，可能会出现文本节点不包含文本，或者连接出现两个文本节点的情况。当在某个节点上调用这个方法时，就会在该节点的后代节点中查找上述两种情况。如果找到了空文本节点就删除它，找到相邻文本节点则合并为一个。
