--- a/Javascript-learning/JavaScript高级程序设计/10.DOM.md
+++ b/Javascript-learning/JavaScript高级程序设计/10.DOM.md
@@ -136,3 +136,49 @@ shallowList.childNodes.length;  // 0
 ```
 
 - normalize() 方法唯一的作用就是处理文档树中的文本节点。由于解析器的实现或 DOM 操作的原因，可能会出现文本节点不包含文本，或者连接出现两个文本节点的情况。当在某个节点上调用这个方法时，就会在该节点的后代节点中查找上述两种情况。如果找到了空文本节点就删除它，找到相邻文本节点则合并为一个。
+
+### 10.1.2 Document 类型
+
+JavaScript中通过 Document 类型表示文档，document 对象是 HTMLDocument（继承自 Document 类型）的一个实例，表示整个 HTML 页面。且 document 是 window 对象的一个属性，因此可以全局访问。Document 节点具有以下特征：
+- nodeType 为 9
+- nodeName 为 “#document”
+- nodeValue 为 null
+- parentNode 为 null
+- ownerDocument 为 null
+- 子节点可能是一个 DocumentType（最多一个）、Element（最多一个）、ProcessingInstruction 或 Comment。
+
+Document 类型表示 HTML 页面或者其他基于 XML 的文档，最常见的也就是作为 HTMLDocument 实例的 document 对象。
+
+#### 1. 文档的子节点
+
+虽然 DOM 标准规定 Document 节点的子节点可以是 DocumentType、Element、ProcessingInstruction 或 Comment，但是还有两个内置的访问其子节点的快捷方式：
+- documentElement：该属性始终指向 HTML 页面中的 `<html>` 元素。
+- childNodes：子节点，可以用于访问文档元素，但 documentElement 更便捷。
+
+document 对象还有一个 body 属性，直接指向 `<body>` 元素。
+
+**所有浏览器都支持 document.documentElement 和 document.body 属性。**
+
+document 的另一个可能的子节点是 DocumentType。通常将 `<!DOCTYPE>` 标签看成与文档其他部分不同的实体，可以通过 doctype 属性访问（具体实现差异请查看 《JavaScript高级程序设计》第三版 P254）：
+
+```js
+var doctype = document.doctype;  // 获取对 <!DOCTYPE> 的引用
+```
+
+通常情况下，我们都用不着在 document 对象上调用 appendChild()、removeChild() 和 replaceChild()，因为文档类型（如果存在的话）是只读的，且它只能有一个元素子节点。
+
+#### 2. 文档信息
+
+作为 HTMLDocument 的一个实例，document 对象还有一些标准的 Document 对象所没有的属性：
+- title：可以获取和设置网页标题，但改变它并不会影响 `<title>` 元素
+- URL：包含页面的完整 URL
+- referrer：链接到当前页面的 URL。在没有来源的情况下，该属性可能为空字符串。
+- domain：页面的域名
+
+只有 title 和 domain 是可以设置的，并且出于安全方面的原因 domain 并非可以设置任意值，只能将 domain 设置为更上级域名，如本来是 p2p.wrox.com，那么只能将其设置为 wrox.com。
+
+当页面中包含其他子域的框架或内嵌框架时，能够设置 document.domain 就非常方便了。由于跨域安全限制，来自不同子域的页面无法通过 JavaScript 通信。而通过将每个页面的 document.domain 设置为相同的值，这些页面就可以相互访问对方包含的 JavaScript 对象了。例如，假设有一个页面加载自 www.wrox.com，其中包含一个内嵌框架，框架内的页面加载自 p2p.wrox.com。由于 document.domain 字符串不一样，内外两个页面之间无法相互访问对方的 JavaScript 对象。但如果将这两个页面的 document.domain 都设置为 wrox.com，则它们之间就可以相互通信了。
+
+浏览器对 domain 属性还有一个限制，即如果域名一开始是“松散的（loose）”，那么就不能将其再设置为“紧绷的（tight）”。换句话说，在将 document.domain 设置为 wrox.com 之后，就不能再将其设置回 p2p.wrox.com 了，否则将会报错。
+
+#### 3. 查找元素
