--- a/Javascript-learning/JavaScript高级程序设计/10.DOM.md
+++ b/Javascript-learning/JavaScript高级程序设计/10.DOM.md
@@ -182,3 +182,300 @@ var doctype = document.doctype;  // 获取对 <!DOCTYPE> 的引用
 浏览器对 domain 属性还有一个限制，即如果域名一开始是“松散的（loose）”，那么就不能将其再设置为“紧绷的（tight）”。换句话说，在将 document.domain 设置为 wrox.com 之后，就不能再将其设置回 p2p.wrox.com 了，否则将会报错。
 
 #### 3. 查找元素
+
+取得元素的操作可以使用 document 对象的几个方法来完成。其中 Document 类型为此提供了两个方法：
+- getElementById()
+- getElementsByTagName()。
+
+getElementsByTagName() 接受一个参数，表示取得元素的标签名，返回零个或多个元素的 NodeList。在 HTML 文档中，这个方法返回一个 HTMLCollection 对象，作为一个 “动态” 集合，该对象与 NodeList 非常类似。可以使用方括号语法或 item() 方法来访问 HTMLCollection 对象中的项，集合中元素数量可以通过 length 得到。HTMLCollection 对象还有一个方法 —— namedItem()，它可以通过元素 name 特性取得集合中的项。同时 HTMLCollection 还支持直接使用方括号来访问命名的项。
+
+```js
+var myImage = imgCol['myImage'];  // 取得 imgCol 中 name 为 myImage 的元素
+```
+
+对于 HTMLCollection 而言，我们可以向方括号中传入数值或字符串类型的索引。在后台，对数值索引就会调用 item()，对字符串索引就会调用 namedItem()。
+
+要想去的文档中所有的元素，可以向 getElementsByTagName() 中传入 “`*`”：
+
+```js
+var allElements = document.getElementsByTagName('*');
+```
+
+上面这一行代码返回的 HTMLCollection 中，就包含了整个页面中按照它们出现顺序排列的所有元素 —— 第一项是 `<html>`，第二项是 `<head>`以此类推，由于 IE 将注释（Comment）实现为元素（Element），因此在 IE 中还会返回所有注释节点。
+
+
+下面这第三个方法只有 HTMLDocument 类型才有的：
+- getElementsByName()
+
+顾名思义，它是根据 name 特性获取所有元素，返回也是 HTMLCollection。最常使用场景就是取得单选按钮（因为为了确保发送给浏览器的值准确无误，所有单选按钮必须具有相同 name 特性）。
+
+#### 4. 特殊集合
+
+以下集合都是 HTMLCollection 对象，它们为访问文档常用部分提供了便捷方式：
+- document.anchors：包含文档中所有带 name 特性的 `<a>` 元素
+- document.applets：包含文档中所有的 `<applet>` 元素，由于不再推荐使用该元素，因此该集合也不建议使用了
+- document.forms：包含文档中所有的 `<form>` 元素，与 document.getElementsByTagName('form') 得到相同结果
+- document.images：包含文档中所有的 `<img>` 元素，与 document.getElementsByTagName('img') 得到相同结果
+- document.links：包含文档中所有带 href 特性的 `<a>` 元素
+
+这些集合始终都可以通过 HTMLDocument 对象访问到，并且与 HTMLCollection 对象一样，集合中的项也会随着当前文档内容的更新而更新。
+
+#### 5. DOM 一致性检测
+
+DOM 分为多个级别，也包含多个部分，因此检测浏览器实现了 DOM 的哪些部分就十分必要了。
+
+document.implementation 属性就是为此提供相应信息和功能的对象，与浏览器对 DOM 的实现直接对应。
+
+DOM1 级只为 document.implementation 规定了一个方法，即 hasFeature()。这个方法接受两个参数：要检测的 DOM 功能和版本号，如果浏览器支持，则返回 true：
+
+```js
+var hasXmlDom = document.implementation.hasFeature('XML', '1.0');
+```
+
+**该方法已废弃**，参考[DOMImplementation.hasFeature()
+](https://developer.mozilla.org/en-US/docs/Web/API/DOMImplementation/hasFeature)
+
+#### 6. 文档写入
+
+将输出流写入到网页：
+- write()：原样写入
+- writeln()：会在字符串末尾添加 `\n`
+- open()：
+- close()：
+
+在页面被加载的过程中，可以使用这两个方法向网页中动态的添加内容：
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>document.write</title>
+</head>
+<body>
+  <script>
+    document.write('<script type="text/javascript" src="file.js"><\/script>');
+  </script>
+</body>
+</html>
+```
+
+如果在文档加载结束后再调用 document.write()，那么输出的内容将会**重写整个页面**：
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>document.write</title>
+</head>
+
+<body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, doloremque.</p>
+  <script>
+    window.onload = function () {
+      document.write('Hello world!');
+    }
+  </script>
+</body>
+
+</html>
+```
+
+此处添加 window.onload 事件，等到页面全部加载之后执行函数，则页面中只有 “Hello world!”，它重写了整个页面。
+
+对于 open() 和 close() 分别用于打开和关闭网页输出流。如果是在页面加载期间使用 write() 或 writeln() 则不需要这两个方法。
+
+严格型 XHTML 文档不支持文档写入。对于那些按照 application/xml+xhtml 内容类型提供的页面，这两个方法也同样无效。
+
+### 10.1.3 Element 类型
+
+Element 类型是除了 Document 类型之外最常用的类型了。它用于表现 XML 或 HTML 元素，提供了对元素标签名、子节点及特性的访问。 Element 节点具有如下特征：
+- nodeType 为 1
+- nodeName 为元素标签名
+- nodeValue 为 null
+- parentNode 可能是 Document 或 Element
+- 子节点可能是 Element、Text、Comment、ProcessingInstruction、CDATASection 或 EntityReference
+
+要访问元素的标签名，可以使用 nodeName 属性，也可以使用 tagName 属性。这两个属性返回相同的值。
+
+在 HTML 中，标签名始终都是以全大写的形式表示；而在 XML 中，标签则始终和源代码保持一致。因此可以使用 toLowerCase() 先进行转换。
+
+#### HTML 元素
+
+所有 HTML 元素都由 HTMLElement 类型表示，即使不是直接通过这个类型，也是通过它的子类型来表示。
+
+HTMLElement 类型直接继承自 Element 并添加了一些属性。添加的这些属性分别对应于每个 HTML 元素中都存在的下列标准特性：
+- id：元素文档中的唯一标识符
+- title：元素的附加说明信息（一般通过工具提示条显示出来）
+- lang：元素内容的语言代码，很少使用
+- dir：语言的方向，值为 `ltr`（left-to-right）或 `rtl`
+- className：与元素的 class 特性对应（没有将这个属性命名为 class 是因为 class 是 ECMAScript 的保留字）。
+
+可以通过元素的这些特性获取或设置相应的特性。
+
+前面提到过，所有的 HTML 元素都是由 HTMLElement 或者其更具体的子类型来表示。《JavaScript高级程序设计》第三版 P263 罗列了所有 HTML 元素以及与之关联的类型。
+
+#### 取得特性
+
+操作特性的 DOM 方法主要有三个：
+- getAttribute()
+- setAttribute()
+- removeAttribute()
+
+##### getAttribute()
+
+传递给 getAttribute() 的特性名与实际特性名相同，如果给定名称的特性不存在，则返回 null。
+
+通过 getAttribute() 方法也可以获取自定义特性，特性的名称不区分大小写，即 “ID” 和 “id” 是同一个特性。另外也要注意的是，根据 HTML5 规范，自定义特性应该加上 `data-` 前缀。
+
+任何元素的所有特性，也都可以通过 DOM 元素本身的属性来访问。不过，只有公认的（非自定义的）特性才会以属性的形式添加到 DOM 对象中。另外，有两类特殊的特性，它们虽然有对应的属性名，但是属性的值与通过 getAttribute() 返回的值并不相同：
+- style：通过 getAttribute() 获取的 style 是字符串，而通过元素对象访问得到的是一个对象。
+- 事件处理程序：通过 getAttribute() 返回的是相应函数的代码的字符串，而通过元素对象属性得到的是一个 JavaScript 函数（如果未指定，则返回 null）。
+
+由于存在这些差别，一般不经常使用 getAttribute() 而是直接使用对象属性。**一般只有在取得自定义特性值的情况下，才会使用 getAttribute() 方法。**
+
+##### setAttribute()
+
+setAttribute() 既可以操作 HTML 特性，也可以操作自定义特性。通过这个方法设置的特性名会统一被转换为小写形式。
+
+因为所有特性都是属性，所以直接给属性赋值可以设置特性的值，但是如果不是使用 SetAttribute() 则属性不会自动成为元素特性。
+
+##### removeAttribute()
+
+该方法会彻底删除元素特性。调用这个方法不仅会清除特性的值，而且也会从元素中完全删除特性。
+
+#### 4. attributes 属性
+
+Element 类型是使用 attributes 属性的唯一一个 DOM 节点类型。attributes 属性为 NamedNodeMap 类型，与 NodeList 类似，也是一个 “动态” 集合。元素的每一个特性都由一个 `Attr`（nodeType 为 2，即 Node.ATTRIBUTE_NODE(2)）节点表示，每个节点都保存在 NamedNodeMap 对象中。NamedNodeMap 对象拥有如下方法：
+- getNamedItem(name)：返回 nodeName 属性等于 name 的节点
+- removeNamedItem(name)：从列表中移除 nodeName 属性等于 name 的节点
+- setNamedItem(node)：向列表中添加节点，以节点的 nodeName 属性为索引
+- item(pos)：返回位于下标 pos 位置的节点
+
+attributes 属性中包含一些列节点，每个节点的 nodeName 就是特性的名称，而节点的 nodeValue 就是特性的值。要取得元素的 id 特性，可以使用如下代码：
+
+```js
+var id = element.attributes.getNamedItem('id').nodeValue;  // 也可以使用方括号方式
+```
+
+调用 removeNamedItem() 方法与在元素上调用 removeAttribute() 方法效果相同 —— 直接删除具有给定名称的特性。但是 removeAttribute() 没有返回值，而 removeNamedItem() 会返回被删除的 `Attr` 节点。
+
+一般来说，attributes 使用起来不太方便，因此更多的是使用 getAttribute()、removeAttributes() 和 setAttributes()。不过如果想要遍历元素的特性，attributes 属性倒是排上了用场，在需要将 DOM 结构序列化为 XML 或者 HTML 字符串时多数都会遍历元素特性。参考 《JavaScript高级程序设计》 第三版 P267。
+
+#### 5. 创建元素
+
+document.createElement() 用于创建新的元素。这个方法只接受一个参数，即需要创建的元素的标签名。这个标签名在 HTML 文档中不区分大小写，而在 XML （包括 XHTML） 中，则是区分大小写的。在使用 createElement() 创建新元素的同时，也为新元素设置了 ownerDocument 属性。
+
+```js
+var div = document.createElement('div');
+div.id = 'myNewDiv';
+div.className = 'box';
+```
+
+由于新创建的元素尚未被添加到文档树中，因此设置这些特性不会影响浏览器显示，可以通过 appendChild()、insertBefore() 或 replaceChild() 将元素添加到文档中。
+
+#### 元素的子节点
+
+元素的 childNodes 中包含了所有的子节点，不同浏览器在看待这些节点方面存在显著不同：
+
+```html
+<ul>
+  <li>item 1</li>
+  <li>item 2</li>
+  <li>item 3</li>
+</ul>
+```
+
+上面这段代码，如果是 IE，则 `<ul>` 包含 3 个子节点，分别是 3 个 `<li>` 元素。如果是其他浏览器，则 `<ul>` 会有 7 个元素，包括 3 个 `<li>` 元素和 4 个文本节点（`<li>`元素之间的空白符），如果删除代码中的空白符，则所有浏览器都返回 3 个子节点。因此，在执行某些操作之前，需要判断一下元素的 nodeType 属性：
+
+```js
+for (var i = 0, len = element.childNodes.length; i < len; i++) {
+  if (element.childNodes[i].nodeType == 1) {
+    // 执行操作
+  }
+}
+```
+
+如果想获取某个特定标签名的子节点或后代子节点该怎么办呢？实际上，元素也支持 getElementsByTagName() 方法，通过元素调用此方法，除了搜索起点从当前元素开始之外，其他方面都跟 document 调用这个方法相同。因此对于上面的代码，如果想获取 `<ul>` 下面的 `<li>` 元素，可以使用：`list.getElementsByTagName('li');`。
+
+### 10.1.4 Text 类型
+
+文本节点可以由 Text 类型表示，包含的是可以照字面解释的村文本内容。纯文本中可以包含转义后的 HTML 字符，但不能包含 HTML 代码（会被转义），Text 节点有以下特征：
+- nodeType 为 3
+- nodeName 值为 “#text”
+- nodeValue 值为节点所包含的文本
+- parentNode 是一个 Element
+- 不支持子节点
+
+可以通过 nodeValue 或者 data 属性访问 Text 节点中的文本，这两个属性包含的值相同。对 nodeValue 的修改也会通过 data 反映出来，反之亦然。可以使用以下方法操作文本节点中的文本：
+- appendData(text)：将 text 添加到节点末尾
+- deleteData(offset, count)： 从 offset 指定的位置开始删除 count 个字符
+- insertData(offset, text)： 在 offset 指定的位置插入 text
+- replaceData(offset, count, text)： 用 text 替换从 offset 指定的位置开始到 offset + count 为止
+- splitText(offset)：从 offset 指定的位置将当前文本节点分成两个节点
+- substringData(offset, count)： 提取从 offset 指定位置开始到 offset + count 为止处的字符串
+
+除此之外，还有一个 length 属性表示节点中字符的数目。且 nodeValue.length 和 data.length 保存同样的值。
+
+默认情况下，每个可以包含内容的元素最多只能有一个文本节点，且必须确实有内容存在，如：
+
+```html
+<!-- 没有内容，也就没有文本节点 -->
+<div></div>
+<!-- 有空格，因而有一个文本节点 -->
+<div> </div>
+<!-- 有内容，因而有一个文本节点 -->
+<div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ipsum? </div>
+```
+
+可以通过文本节点获取或设置节点的文本内容。在修改文本节点时需要注意，此时字符串会经过 HTML（或 XML，取决于文档类型）编码，换句话说，一些符号会被转义，如：
+
+```js
+// 输出结果是 "Some &lt;strong&gt; other &lt;/strong&gt; message"
+div.firstChild.nodeValue = "Some <strong> other </strong> message";
+```
+
+应该说这是在向 DOM 文档中插入文本之前，先对其进行 HTML 编码的一种有效方式。
+
+#### 1. 创建文本节点
+
+document.createTextNode() 用于创建新的文本节点，这个方法接受一个参数 —— 要插入节点中的文本。与设置已有文本节点的值一样，作为参数的文本也将按照 HTML 或 XML 的格式进行编码。
+
+```js
+var textNode = document.createTextNode('<strong>Hi</strong>');
+```
+
+新创建的节点也会为其设置 ownerDocument 属性。
+
+一般情况下每个元素只有一个文本节点，浏览器解析文档时永远不会创建两个相邻文本节点，出现相邻文本节点的情况只会在操作 DOM 时出现，如通过 appendChild() 为元素新添加了一个文本节点，在视觉上两个文本节点会连起来显示，中间不会有空格。
+
+#### 2. 规范化文本节点
+
+由于可能会出现相邻的文本节点导致混乱的情况，比如分不清那个文本节点表示哪个字符串，于是就催生了一个能够合并相邻文本节点的方法 —— normalize()。如果在一个包含两个或多个文本节点的父元素上调用 normalize() 方法，则会将所有文本节点合成一个节点：
+
+```js
+var element  = document.createElement('div');
+element.appendChild(document.createTextNode('Hello '));
+element.appendChild(document.createTextNode('World!'));
+document.body.appendChild(element);
+element.childNodes.length; // 2
+element.normalize();
+element.childNodes.length; // 1
+```
+
+#### 3. 分割文本节点
+
+Text 类型提供了一个作用与 normalize() 相反的方法：splitText()。这个方法会将一个文本节点分成两个文本节点，即按照指定的位置分割 nodeValue 的值，原来的文本节点将包含从开始位置到指定位置之前的内容，新文本节点将包含剩下的文本。该方法会返回一个新的文本节点，该节点与原节点的 parentNode 相同：
+
+```js
+var element = document.createElement('div');
+var textNode = document.createTextNode('Hello World!');
+element.appendChild(textNode);
+document.body.appendChild(element);
+var newNode = element.firstChild.splitText(5);
+element.firstChild.nodeValue; // "Hello"
+newNode.nodeValue; // " world!"
+element.childNodes.length; // 2
+```
+
+分割文本节点是从文本节点提取数据的一种常用 DOM 解析技术。
