--- a/Javascript-learning/JavaScript高级程序设计/10.DOM.md
+++ b/Javascript-learning/JavaScript高级程序设计/10.DOM.md
@@ -479,3 +479,128 @@ element.childNodes.length; // 2
 ```
 
 分割文本节点是从文本节点提取数据的一种常用 DOM 解析技术。
+
+### 10.1.5 Comment 类型
+
+Comment 在 DOM 中表示注释。具有以下特征：
+- nodeType 为 8
+- nodeName 为 “#comment”
+- nodeValue 为注释类容
+- parentNode 可能是 Document 或 Element
+- 不支持子节点
+
+Comment 与 Text 都继承自相同的基类，因此它拥有除 splitText() 之外的所有字符串操作方法。也可以通过 nodeValue 和 data 属性来获取注释内容。
+
+注释节点可以通过其父节点来访问：
+
+```html
+<!-- A Comment -->
+<div id="myDiv"><!-- A Comment --></div>
+```
+
+```js
+var div = document.getElementById('myDiv');
+var comment = div.firstChild;
+comment.data; // "A Comment"
+```
+
+document.createComment(text) 方法用于创建注释节点。
+
+### 10.1.6 CDATASection 类型
+
+CDATASection 类型只针对基于 XML 的文档，表示的是 CDATA 区域。与 Comment 类似， CDATASection 类型继承自 Text 类型，因此拥有除 splitText() 之外的所有字符串操作方法。具有如下特征：
+- nodeType 为 4
+- nodeName 为 “#cdata-section”
+- nodeValue 为 CDATA 区域中的内容
+- parentNode 可能是 Document 或 Element
+- 不支持子节点
+
+CDATA 区域只会出现在 XML 文档中，因此多数浏览器都会把 CDATA 区域错误的解析为 Comment 或 Element。以下面代码为例：
+```html
+<div><![CDATA[This is some content.]]></div>
+```
+
+这个例子中的 `<div>` 元素应该包含一个 CDATASection 节点。可是四大主流浏览器无一能够这样解析它。即使对于有效的 XHTML 页面，浏览器也没有正确地支持嵌入的 CDATA 区域。
+
+在真正的 XML 文档中，可以使用 document.createCDataSection() 来创建 CDATA 区域，只需为其传入节点内容即可。
+
+### 10.1.7 DocumentType 类型
+
+DocumentType 类型在 Web 浏览器中并不常用，它包含着与文档 doctype 有关的所有信息。具有如下特征：
+- nodeType 为 10
+- nodeName 为 doctype 的名称
+- nodeValue 为 null
+- parentNode 为 Document
+- 不支持子节点
+
+### 10.1.8 DocumentFragment 类型
+
+在所有的节点类型中，只有 DocumentFragment 在文档中没有对应的标记。DOM 规定文档片段（document fragment）是一种 “轻量级” 文档，可以包含和控制节点，但不会像完整的文档那样占用额外资源。DocumentFragment 节点具有以下特征：
+- nodeType 为 11
+- nodeName 为 “#document-fragment”
+- nodeValue 为 null
+- parentNode 为 null
+- 子节点可以是 Element、ProcessingInstruction、Comment、Text、CDATASection 或 EntityReference。
+
+虽然不能将文档片段直接添加到文档中，但是可以将它作为一个 “仓库” 来用，即可以在里面保存将来可能会添加到文档中的节点。可以使用 document.createDocumentFragment() 方法。
+
+文档片段继承了 Node 的所有方法，可以用于执行那些针对文档的 DOM 操作。如果将文档中的节点添加到文档片段中，就会从文档树中移除该节点，也不会从浏览器中在看到该节点。添加到文档片段中的新节点同样也不属于文档树。可以通过 appendChild() 或 insertBefore() 将文档片段中的内容添加到文档中，在将文档片段传递给这两个方法时，实际上只会将文档片段的所有子节点添加到相应位置上；文档片段本身用于不会成为文档树的一部分。
+
+例如：
+
+```html
+<ul id="myList"></ul>
+```
+
+加入我们要为这个 `<ul>` 元素添加 3 个列表项。如果逐个添加列表项，将会导致浏览器反复渲染新信息。为了避免这个问题，可以像下面这样使用一个文档片段来保存创建的列表项，然后再一次性将它们添加到文档中：
+
+```js
+var fragment = document.createDocumentFragment();
+var ul = document.getElementById('myList');
+var li = null;
+
+for  (var i = 0; i < 3; i++) {
+  li = document.createElement('li');
+  li.appendChild(document.createTextNode('Item' + (i + 1)));
+  fragment.appendChild(li);
+}
+
+ul.appendChild(fragment);
+```
+
+### 10.1.9 Attr 类型
+
+元素的特性在 DOM 中以 Attr 类型来表示。从技术角度讲，特性就是存在于元素的 attributes 属性中的节点，特性节点具有如下特征：
+- nodeType 为 2
+- nodeName 为特性的名称
+- nodeValue 为特性的值
+- parentNode 为 null
+- 在 HTML 中不支持子节点
+- 在 XML 中子节点可以是 Text 或 EntityReference
+
+尽管它们也是节点，但特性却不被认为是 DOM 文档树中的一部分。开发人员最常使用的是 getAttribute()、setAttribute() 和 removeAttribute() 方法，很少直接引用特性节点。
+
+Attr 对象有 3 个属性：
+- name
+- value
+- specified
+
+其中 name 是特性的名称（与 nodeName 值相同），value 是特性的值（与 nodeValue 值相同），而 specified 是一个用于区别特性是在代码中指定的还是默认指定的一个布尔值。
+
+使用 document.createAttribute() 并传入特性的名称可以创建特性节点，如要为元素添加 align 特性：
+
+```js
+var attr = document.createAttribute('align');
+attr.value = 'left';
+element.setAttributeNode(attr);
+element.attributes['align'].value; // "left"
+element.getAttributeNode('align').value; // "left"
+element.getAttribute('align'); // "left"
+```
+
+setAttributeNode() 方法用于将新创建的特性添加到元素中。添加之后，可以通过下列任何方式之一访问该特性：
+- attributes
+- getAttributeNode()
+- getAttribute()
+
+其中 attributes 和 getAttributeNode() 都会返回对应特性的 Attr 节点，而 getAttribute() 则只返回特性的值。
