--- a/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
+++ b/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
@@ -178,3 +178,87 @@ if (div.dataset.myname) {
   alert('Hello, ' + div.dataset.myname);
 }
 ```
+
+### 11.3.6 插入标记
+
+需要大量插入新 HTML 标记的情况下，通过 DOM 操作非常麻烦，因为不仅需要创建一系列 DOM 节点，而且还需要小心地按照顺序把它们连接起来。相对而言，直接插入 HTML 字符串简单得多，因此 HTML5 将以下插入标记相关的 DOM 扩展纳入了规范之内：
+
+#### 1. innerHTML 属性
+
+使用 innerHTML 来读取值时，将获取元素所有的子节点（包括元素、注释和文本节点）
+
+使用 innerHTML 来设置值时，它会根据指定值创建新 DOM 树，然后用这个 DOM 树完全替换调用元素原先的所有子节点。
+
+      为 innerHTML 设置 HTML 字符串后，浏览器会将这个字符串解析为相应的 DOM 树。因此设置了 innerHTML 后，再从中读取 HTML 字符串，会得到与设置时不一样的结果。原因在于返回的字符串是根据原始 HTML 字符串创建的 DOM 树经过序列化之后的结果。
+
+在大多数浏览器中，通过 innerHTML 插入的 `<script>` 元素不会执行其中的脚本。
+
+并不是所有元素都支持 innerHTML 属性。不支持 innerHTML 的元素有：
+- col
+- colgroup
+- frameset
+- head
+- html
+- style
+- table
+- tbody
+- thead
+- tfoot
+- tr
+
+在 IE 8- 版本中，`<title>` 也没有 innerHTML 属性。
+
+#### 2. outerHTML 属性
+
+使用 outerHTML 来读取值时，返回调用它的元素及所有子节点的 HTML 标签。
+使用 outerHTML 来设置值时，会根据指定的 HTML 字符串创建新的 DOM 子树，然后用这个 DOM 子树完全替换调用元素。
+
+（IE4 +）
+
+#### 3. insertAdjacentHTML() 方法
+
+insertAdjacentHTML() 方法接收两个参数：
+- 插入位置
+  - “beforebegin”：在当前元素之前插入一个紧邻的同辈元素
+  - “afterbegin”：在当前元素之下插入一个新的子元素或在第一个子元素之前再插入新的子元素
+  - “beforeend”：在当前元素之下插入一个新的子元素或在最后一个子元素之后再插入新的子元素
+  - “afterend”：在当前元素之后插入一个紧邻的同辈元素
+- 插入的 HTML 文本
+
+```js
+// 作为前一个同辈元素插入
+element.insertAdjacentHTML('beforebegin', '<p>Hello world!</p>')
+// 作为第一个子元素插入
+element.insertAdjacentHTML('afterbegin', '<p>Hello world!</p>')
+// 作为最后一个子元素插入
+element.insertAdjacentHTML('beforeend', '<p>Hello world!</p>')
+// 作为后一个同辈元素插入
+element.insertAdjacentHTML('afterend', '<p>Hello world!</p>')
+```
+
+#### 4. 内存与性能问题
+
+删除带有事件处理程序或引用了其他 JavaScript 对象子树时，就有可能导致内存占用问题。因此在移除相应的元素之前，最好先将它们的事件和引用的对象也一并移除。
+
+一般来说，在插入大量新 HTML 标记时，使用 innerHTML 属性与通过多次 DOM 操作先创建节点再指定它们之间的关系相比，效率要高得多。**这是因为在设置 innerHTML 或 outerHTML 时，就会创建一个 HTML 解析器，这个解析器是在浏览器级别的代码基础上运行的，因此比执行 JavaScript 效率快得多。**
+
+### 11.3.7 scrollIntoView() 方法
+
+scrollIntoView() 可以在所有 HTML 元素上调用，通过滚动浏览器窗口或某个容器元素，调用元素就可以出现在视口中。如果不传参数或者传入 true 作为参数则会让元素出现在窗口顶部，如果传入 false 则会出现在底部。
+
+```js
+document.forms[0].scrollIntoView();
+```
+
+## 11.4 专有扩展
+
+### 11.4.1 文档模式
+
+X-UA-Compatible
+
+### 11.4.2 children 属性
+
+由于 IE 9 之前的版本与其他浏览器在处理文本节点中的空白符时有差异，因此就出现了 children 属性，它是 HTMLCollection 的实例，只包含元素中同样还是元素的子节点。除此之外，children 与 childNodes 没有什么区别。
+
+### 11.4.3 contains() 方法
+
